[package]
name = "repodump"
version = "0.1.0"
authors = ["Brian Duff <cairndubh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
serde = { version = "*", features = ["derive"] }
reqwest = { version = "*", features = ["blocking"] }
serde_json = "*"
rustyline = "*"
regex = "*"
lazy_static = "*"
threadpool = "*"
